--- a/app/src/main/res/layout/activity_inserir_dicas.xml
+++ b/app/src/main/res/layout/activity_inserir_dicas.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -11,15 +11,15 @@
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
-            app:navigationIcon="@drawable/arrow_left"
-            app:title="@string/app_name"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
-            app:titleTextColor="@color/white"
             android:elevation="4dp"
             android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
-            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
+            app:navigationIcon="@drawable/arrow_left"
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+            app:title="@string/app_name"
+            app:titleTextColor="@color/white" />
 
         <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
@@ -28,17 +28,18 @@
             android:paddingTop="20dp"
             android:paddingBottom="30dp"
             tools:context=".ui.main.MainActivity">
+
             <TextView
                 android:id="@+id/welcomeText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="16dp"
+                android:text="Olá Celso,"
                 android:textAllCaps="false"
                 android:textColor="@color/black"
-                android:textSize="20sp"
+                android:textSize="18sp"
                 app:layout_constraintBottom_toTopOf="@+id/txtInfo"
-                app:layout_constraintStart_toStartOf="parent"
-                android:text="Olá Celso," />
+                app:layout_constraintStart_toStartOf="parent" />
 
             <TextView
                 android:id="@+id/txtInfo"
@@ -48,9 +49,10 @@
                 android:text="Aqui você pode inserir dicas de presente para que a pessoa que sorteou seu nome possa visualizar, facilitando na hora de comprar seu presente."
                 android:textAllCaps="false"
                 android:textColor="@color/black"
-                android:textSize="20sp"
-                app:layout_constraintTop_toBottomOf="@id/welcomeText"
-                app:layout_constraintStart_toStartOf="parent" />
+                android:textSize="18sp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/welcomeText" />
+
             <TextView
                 android:id="@+id/txtInfo2"
                 android:layout_width="wrap_content"
@@ -59,9 +61,10 @@
                 android:text="Somente você e a pessoa que sorteou seu nome poderão visualizar as dicas."
                 android:textAllCaps="false"
                 android:textColor="@color/black"
-                android:textSize="20sp"
-                app:layout_constraintTop_toBottomOf="@id/txtInfo"
-                app:layout_constraintStart_toStartOf="parent" />
+                android:textSize="18sp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/txtInfo" />
+
             <TextView
                 android:id="@+id/txtInfo3"
                 android:layout_width="wrap_content"
@@ -70,51 +73,60 @@
                 android:text="Você pode inserir até 3 dicas de presente."
                 android:textAllCaps="false"
                 android:textColor="@color/black"
-                android:textSize="20sp"
-                app:layout_constraintTop_toBottomOf="@id/txtInfo2"
-                app:layout_constraintStart_toStartOf="parent" />
-            <LinearLayout
-                app:layout_constraintTop_toBottomOf="@id/txtInfo3"
-                android:layout_marginTop="16dp"
+                android:textSize="18sp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/txtInfo2" />
+
+            <androidx.core.widget.NestedScrollView
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:padding="8dp"
-                android:gravity="center_vertical"
+                android:layout_marginTop="8dp"
                 app:layout_constraintBottom_toTopOf="@id/btnSave"
-                android:orientation="vertical">
-                <androidx.appcompat.widget.AppCompatEditText
-                    android:id="@+id/etDica1"
-                    android:hint="Dica número 1"
+                app:layout_constraintTop_toBottomOf="@id/txtInfo3">
+
+
+                <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:padding="8dp"
-                    android:inputType="text"
-                    android:imeOptions="actionNext"
-                    android:maxLength="50"
-                    android:background="@drawable/border_background"/>
-                <androidx.appcompat.widget.AppCompatEditText
-                    android:layout_marginTop="16dp"
-                    android:id="@+id/etDica2"
-                    android:hint="Dica número 2"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:padding="8dp"
-                    android:inputType="text"
-                    android:imeOptions="actionNext"
-                    android:maxLength="50"
-                    android:background="@drawable/border_background"/>
-                <androidx.appcompat.widget.AppCompatEditText
-                    android:hint="Dica número 3"
-                    android:id="@+id/etDica3"
-                    android:layout_marginTop="16dp"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:maxLength="50"
-                    android:padding="8dp"
-                    android:inputType="text"
-                    android:imeOptions="actionDone"
-                    android:background="@drawable/border_background"/>
-            </LinearLayout>
+                    android:orientation="vertical">
+
+                    <androidx.appcompat.widget.AppCompatEditText
+                        android:id="@+id/etDica1"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/border_background"
+                        android:hint="Dica número 1"
+                        android:imeOptions="actionNext"
+                        android:inputType="text"
+                        android:maxLength="50"
+                        android:padding="8dp" />
+
+                    <androidx.appcompat.widget.AppCompatEditText
+                        android:id="@+id/etDica2"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="16dp"
+                        android:background="@drawable/border_background"
+                        android:hint="Dica número 2"
+                        android:imeOptions="actionNext"
+                        android:inputType="text"
+                        android:maxLength="50"
+                        android:padding="8dp" />
+
+                    <androidx.appcompat.widget.AppCompatEditText
+                        android:id="@+id/etDica3"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="16dp"
+                        android:background="@drawable/border_background"
+                        android:hint="Dica número 3"
+                        android:imeOptions="actionDone"
+                        android:inputType="text"
+                        android:maxLength="50"
+                        android:padding="8dp" />
+                </LinearLayout>
+            </androidx.core.widget.NestedScrollView>
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/btnSave"
